welcome.lessons.welcome.loopdowhile.LoopDoWhile.scala.error
Program:4: error: not found: value estSurBlanche
} while (!estSurBlanche)
          ^